# oxideav-scribe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
src/: bidi.rs  cache.rs  color.rs  color_glyph.rs  compose.rs  face.rs  face_chain.rs  layout.rs  lib.rs  outline.rs  post.rs  rasterizer.rs  script.rs  shaper.rs  stroke.rs  style.rs  variations.rs
src/bidi/: data.rs
src/shaping/: arabic.rs  arabic_pf.rs  contextual_pos.rs  feature_subst.rs  general.rs  indic.rs  mod.rs
tests/: dejavu_render.rs  round10_bengali_cluster.rs  round10_tamil_cluster.rs  round11_gujarati_cluster.rs  round11_kannada_cluster.rs  round11_telugu_cluster.rs  round125_multi_subst.rs  round128_ligature_subst.rs  round12_khmer_cluster.rs  round12_sinhala_cluster.rs  round12_thai_cluster.rs  round13_burmese_cluster.rs  round13_lao_cluster.rs  round14_variable_metrics.rs  round156_alternate_subst.rs  round15_ccmp_calt.rs  round175_shape_text_with_script.rs  round183_alternate_index.rs  round186_bidi_paragraph_level.rs  round191_bidi_weak_types.rs  round198_bidi_neutral_types.rs  round204_bidi_implicit_levels.rs  round210_bidi_line_reordering.rs  round217_bidi_explicit_levels.rs  round220_bidi_isolating_run_sequences.rs  round227_bidi_paragraph_pipeline.rs  round233_bidi_multi_paragraph.rs  round247_bidi_l3_combining_marks.rs  round257_bidi_n0_bracket_pairs.rs  round268_bidi_l4_mirroring.rs  round276_cursive_attachment.rs  round283_bidi_unicode_data_tables.rs  round291_layout_visual_line.rs  round298_single_pos.rs  round2_features.rs  round304_mark_to_ligature.rs  round324_post_glyph_names.rs  round329_gpos_features.rs  round343_contextual_pos.rs  round353_contextual_subst.rs  (+27 more)
tests/font_fixtures/: mod.rs
