[package]
name = "oxideav-scribe"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust font rasterizer + shaper + layout for the oxideav framework — TrueType outline flattening, scanline anti-aliasing, GSUB ligatures, GPOS kerning"
repository = "https://github.com/OxideAV/oxideav-scribe"
homepage = "https://github.com/OxideAV/oxideav-scribe"
readme = "README.md"
keywords = ["font", "rasterizer", "shaper", "truetype", "text"]
categories = ["graphics", "rendering", "text-processing"]

[dependencies]
# Round 7 vector-text APIs (`Face::glyph_path` / `glyph_node`,
# `Shaper::shape_to_paths`) consume `oxideav_core::vector` types
# (`Path`, `PathCommand`, `Node`, `PathNode`, `Transform2D`)
# introduced in oxideav-core 0.1.14.
oxideav-core = "0.1.14"
oxideav-ttf = "0.1"
oxideav-otf = "0.1"
oxideav-pixfmt = "0.1"

[dev-dependencies]
# round5_cjk_fallback integration test fetches a ~10 MB Noto Sans CJK
# fixture from samples.oxideav.org under target/test-fixtures/fonts/.
# Cached after first download; gated behind OXIDEAV_NETWORK_TESTS=1;
# SHA-256 verified on every load. Mirrors the oxideav-msmpeg4
# microsoft_fixtures pattern.
ureq = "3"
