[package]
name = "oxideav-scribe"
version = "0.1.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust vector font shaper + layout for the oxideav framework — TrueType / OTF outline access, GSUB ligatures, GPOS kerning, mark attachment, CBDT colour bitmaps. Pixel pipeline lives in oxideav-raster."
repository = "https://github.com/OxideAV/oxideav-scribe"
homepage = "https://github.com/OxideAV/oxideav-scribe"
readme = "README.md"
keywords = ["font", "rasterizer", "shaper", "truetype", "text"]
categories = ["graphics", "rendering", "text-processing"]

[dependencies]
# Vector-text APIs (`Face::glyph_path` / `glyph_node`,
# `Shaper::shape_to_paths`) consume `oxideav_core::vector` types
# (`Path`, `PathCommand`, `Node`, `PathNode`, `ImageRef`,
# `Transform2D`) introduced in oxideav-core 0.1.14. Round 8 / #357
# adds `Group::cache_key` wrapping in `shape_to_paths`, which
# requires the `cache_key` field landed in oxideav-core 0.1.15.
oxideav-core = "0.1"
oxideav-ttf = "0.1"
oxideav-otf = "0.1"
# CBDT/CBLC colour-emoji glyphs ship per-glyph PNG byte streams; we
# decode them to RGBA via the sibling oxideav-png crate. NO external
# `png` / `image` crate per workspace policy.
oxideav-png = "0.1"

[dev-dependencies]
# round5_cjk_fallback / round5_emoji integration tests fetch large
# (~10-20 MB) Noto Sans CJK + Noto Color Emoji fixtures from
# samples.oxideav.org under target/test-fixtures/fonts/. Cached after
# first download; gated behind OXIDEAV_NETWORK_TESTS=1; SHA-256
# verified on every load. Mirrors the oxideav-msmpeg4 microsoft_fixtures
# pattern.
ureq = "3"
